Add API get all data for mobile
