# internal/delivery/http/route/route.go
@@ -73,5 +73,6 @@ func Setup(db *mongo.Database, gin *gin.Engine) {
 	protectedRouter.POST("/api/deck/create", h.CreateDeck)
 	protectedRouter.PUT("/api/deck/update", h.UpdateDeck)
 	protectedRouter.GET("/api/deck/review-cards", h.GetDeckWithReviewCards)
+	protectedRouter.GET("/api/get-all", h.GetAllData)
 	protectedRouter.POST("/api/deck/copy", h.CopyDeck)
 }
